<resources>
    <string name="app_name">Memes Tugas</string>
    <string name="action_sobre">Sobre</string>
    <string name="action_share">Partilhar</string>
    <string name="sharing">Partilhar via</string>
    <string name="available_at">Disponível em</string>
    <string name="meme_name">Nome</string>
    <string name="exception_error">Erro Interno</string>
    <string name="version">Versão</string>
    <string name="app_icon">App Icon</string>
    <string name="made">Feito por Nuno Martins</string>

    <!-- Login Activity -->
    <string name="title_activity_login">Sign In</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="login_button">Login</string>

    <!-- Sign Up Activity -->
    <string name="title_activity_signup">Sign Up</string>
    <string name="name">Your Name</string>
    <string name="signup_repeat">Repeat your Password</string>
    <string name="signup_button">Sign Up</string>
</resources>